# temp_repo

./: .dockerignore  DIR_READER.ipynb  Dockerfile  README.md  docker-compose.yml  helper.ipynb  library.db  library_use_cases.xlsx  pyproject.toml  run_fastapi.py  use_cases.ipynb
DONT_CARE_side_developement/rag/: app_optimized.py  document_service_optimized.py  embeddings_service_optimized.py  llm_service_optimized.py  main.py  monitoring_service.py  rag_optimized.py
DONT_CARE_side_developement/rag/vectorstore/: document_metadata.json
backend/config/: .env  settings.py
backend/rag_sys/src/: main.py  rag.py
backend/src/: main.py  utils.py
backend/src/phongnv37.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chroma_db/: chroma.sqlite3  document_metadata.json
chroma_db/89fbb305-0688-4825-8d23-e8a71637a780/: index_metadata.pickle
data/: library.db  romeo_and_juliet.txt
data/React + Vite + Tailwind_files/: client  main.jsx
data/localhost_files/: main.jsx
dev/graph_rag/: main.py  prompts.py
dev/graph_rag/embedder/: google_emb.py
dev/graph_rag/llm/: llm.py
dev/graph_rag/tools/: tavily_search.py
dev2/graph_rag/: main.py  prompts.py
dev2/graph_rag/embedder/: google_emb.py
dev2/graph_rag/tools/: tavily_search.py
dev3/: main.py  prompts.py
dev3/llm/: cerebras_llm.py
dev3/tools/: db_retriever.py  math_tools.py  search_tool.py
frontend/: .prettierignore  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: authApi.js  axiosConfig.js  bookApi.js  ragApi.js  userApi.js
frontend/src/context/: AIModeContext.jsx  (+2 more)
logs/: log_config.py
phongnv37.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
rag/: app_optimized.py  config_optimized.py  document_service_optimized.py  embeddings_service_optimized.py  llm_service_optimized.py  rag_optimized.py
rag/vectorstore/: document_metadata.json
(+239 files in other folders)
