[project]
name = "phongnv37"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "cerebras>=0.0.1",
    "fastapi>=0.119.0",
    "isort>=7.0.0",
    "langchain>=0.3.27",
    "langchain-cerebras>=0.5.0",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.10",
    "passlib>=1.7.4",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "pypdf>=6.1.1",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
run-config = "backend.src.infrastructure.configurations.config:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend", "backend.*"]
