[project]
name = "phongnv37"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "cerebras>=0.0.1",
    "fastapi>=0.119.0",
    "isort>=7.0.0",
    "langchain>=0.3.27",
    "langchain-cerebras>=0.5.0",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.10",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.2",
    "pydantic-settings>=2.11.0",
    "pypdf>=6.1.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.44",
    "psutil>=7.1.1",
    "python-multipart>=0.0.20",
    "ipykernel>=7.0.1",
    "argon2-cffi>=25.1.0",
    "ruff>=0.14.1",
    "langchain-tavily>=0.2.12",
    "langchain-openai>=0.3.35",
    "langgraph-cli[inmem]>=0.4.4",
    "chardet>=5.2.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "autoimport>=1.6.1",
]

[project.scripts]
run-config = "backend.src.infrastructure.configurations.config:main"
run-rag = "backend.src.infrastructure.rag.graph_rag.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend", "backend.*"]
